# TheAshokaBuddhistFoundation

./: alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0ea01e5f66ee_create_initial_tables.py
app/: main.py
app/core/: config.py  lifespan.py  security.py  templating.py
app/db/: base_model.py  database.py
app/db/models/: user_model.py
app/db/schemas/: token_schemas.py  user_schemas.py
app/repositories/: base_repository.py  user_repository.py
app/services/: auth_service.py  email_service.py  user_service.py
app/static/css/: style.css  theme-gold-blue-white.css
app/static/js/: main.js
app/tasks/: celebry_app.py  celery_app.py  donation_processing_tasks.py  email_tasks.py
app/utils/: logging_config.py
app/web/routers/: auth_web.py  dashboard_web.py  pages_web.py
app/web/templates/auth/: login.html  register.html
app/web/templates/components/: footer.html  navbar.html
app/web/templates/dashboard/: dashboard.html
app/web/templates/errors/: 404.html
app/web/templates/layouts/: base.html
app/web/templates/pages/: about.html  index.html  privacy_policy.html  terms_of_service.html
app/web/templates/partials/: flash_messages.html
